--- a/next/app/components/Button.module.css
+++ b/next/app/components/Button.module.css
@@ -8,4 +8,15 @@
 }
 
 .icon {
+  /* https://fontawesome.com/docs/web/style/fixed-width
+  Font Awesome icons are designed on grid and share a consistent height. 
+  But they vary in width depending on how wide or narrow each symbol is. */
+  height: 16px;
+
+  /* preven unexpected text-select upon button-press/tap attempt */
+  user-select: none;
+}
+
+.icon svg {
+  font-size: 16px;
 }
