--- a/next/app/components/card/contents/CardContents.module.css
+++ b/next/app/components/card/contents/CardContents.module.css
@@ -1,8 +1,5 @@
 .component {
-  background-color: blueviolet;
-
-  /* TODO: placeholder width/height */
-  height: 500px;
+  background-color: grey;
 }
 
 .notifications {
