--- a/next/app/components/card/controls/add-to-card/CardButton.module.css
+++ b/next/app/components/card/controls/add-to-card/CardButton.module.css
@@ -1,7 +1,14 @@
 .component {
+  display: block;
   background-color: #091e420f;
-  padding: 4px 8px;
+  padding: 8px;
 
+  /* cancel button styling */
+  border-style: none;
+  width: 100%;
+}
+
+.flex {
   display: flex;
   column-gap: 10px;
 }
