--- a/next/app/components/card/controls/add-to-card/popup/MembersPopUp.module.css
+++ b/next/app/components/card/controls/add-to-card/popup/MembersPopUp.module.css
@@ -1,39 +1,8 @@
 .component {
   background-color: white;
 
-  width: fit-content;
+  width: 300px;
 
   padding: 20px;
   border-radius: 10px;
-}
-
-.title {
-  display: grid;
-  grid-template-columns: 32px 1fr 32px;
-  margin-bottom: 10px;
-}
-
-.titletext {
-  grid-row: 1/2;
-  grid-column: 2/3;
-  text-align: center;
-}
-
-.close {
-  grid-row: 1/2;
-  grid-column: 3/4;
-}
-
-.searchbox {
-  display: block;
-
-  padding: 8px;
-  width: 100%;
-
-  margin-bottom: 10px;
-
-  /* box-shadow as border */
-  box-shadow: rgba(9, 30, 66, 0.14) 0px 0px 0px 2px inset;
-  border-style: none;
-  box-sizing: border-box; /* not overflow with width 100% */
 }
