close button absolute

--- a/next/app/components/card/Card.module.css
+++ b/next/app/components/card/Card.module.css
@@ -1,5 +1,5 @@
 .component {
-  background-color: lightgrey;
+  background-color: #091e420f;
 
   /* TODO: placeholder width/height */
   max-width: 768px;
